--- a/codigo/libs/libft/Makefile
+++ b/codigo/libs/libft/Makefile
@@ -1,12 +1,12 @@
 # **************************************************************************** #
 #                                                                              #
 #                                                         :::      ::::::::    #
-#    Makeoutfile                                           :+:      :+:    :+:    #
+#    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
 #    By: brivera <brivera@student.42madrid.com>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/09 11:36:05 by brivera           #+#    #+#              #
-#    Updated: 2024/12/17 15:29:53 by brivera          ###   ########.fr        #
+#    Created: 2025/03/25 10:33:30 by brivera           #+#    #+#              #
+#    Updated: 2025/03/25 10:34:31 by brivera          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,10 +16,6 @@ CC = cc
 CFLAGS = -Wall -Wextra -Werror -I./
 
 SRC_DIR = src/ft
-OBJ_DIR = obj
-BONUS_SRC_DIR = src/bonus
-OBJ_BONUS_DIR = src/bonus
-
 # Archivos fuente y objetos
 SRC = $(SRC_DIR)/ft_isalpha.c $(SRC_DIR)/ft_isdigit.c $(SRC_DIR)/ft_isalnum.c \
       $(SRC_DIR)/ft_isascii.c $(SRC_DIR)/ft_isprint.c $(SRC_DIR)/ft_strlen.c \
@@ -32,34 +28,16 @@ SRC = $(SRC_DIR)/ft_isalpha.c $(SRC_DIR)/ft_isdigit.c $(SRC_DIR)/ft_isalnum.c \
       $(SRC_DIR)/ft_strjoin.c $(SRC_DIR)/ft_strtrim.c $(SRC_DIR)/ft_split.c \
       $(SRC_DIR)/ft_itoa.c $(SRC_DIR)/ft_strmapi.c $(SRC_DIR)/ft_striteri.c \
       $(SRC_DIR)/ft_putchar_fd.c $(SRC_DIR)/ft_putstr_fd.c $(SRC_DIR)/ft_putendl_fd.c \
-	$(SRC_DIR)/ft_putnbr_fd.c \
-	$(SRC_DIR)/get_next_line.c
+	  $(SRC_DIR)/ft_putnbr_fd.c \
+	  $(SRC_DIR)/get_next_line.c \
+	  $(SRC_DIR)/ft_lstnew_bonus.c $(SRC_DIR)/ft_lstadd_front_bonus.c \
+	  $(SRC_DIR)/ft_lstsize_bonus.c $(SRC_DIR)/ft_lstlast_bonus.c \
+	  $(SRC_DIR)/ft_lstadd_back_bonus.c $(SRC_DIR)/ft_lstdelone_bonus.c \
+	  $(SRC_DIR)/ft_lstclear_bonus.c $(SRC_DIR)/ft_lstiter_bonus.c \
+	  $(SRC_DIR)/ft_lstmap_bonus.c
 
-BONUS_SRC = $(BONUS_SRC_DIR)/ft_lstnew_bonus.c $(BONUS_SRC_DIR)/ft_lstadd_front_bonus.c \
-            $(BONUS_SRC_DIR)/ft_lstsize_bonus.c $(BONUS_SRC_DIR)/ft_lstlast_bonus.c \
-            $(BONUS_SRC_DIR)/ft_lstadd_back_bonus.c $(BONUS_SRC_DIR)/ft_lstdelone_bonus.c \
-            $(BONUS_SRC_DIR)/ft_lstclear_bonus.c $(BONUS_SRC_DIR)/ft_lstiter_bonus.c \
-            $(BONUS_SRC_DIR)/ft_lstmap_bonus.c
-
-OBJ = $(OBJ_DIR)/ft_isalpha.o $(OBJ_DIR)/ft_isdigit.o $(OBJ_DIR)/ft_isalnum.o \
-      $(OBJ_DIR)/ft_isascii.o $(OBJ_DIR)/ft_isprint.o $(OBJ_DIR)/ft_strlen.o \
-      $(OBJ_DIR)/ft_memset.o $(OBJ_DIR)/ft_bzero.o $(OBJ_DIR)/ft_memcpy.o \
-      $(OBJ_DIR)/ft_memmove.o $(OBJ_DIR)/ft_strlcpy.o $(OBJ_DIR)/ft_strlcat.o \
-      $(OBJ_DIR)/ft_toupper.o $(OBJ_DIR)/ft_tolower.o $(OBJ_DIR)/ft_strchr.o \
-      $(OBJ_DIR)/ft_strrchr.o $(OBJ_DIR)/ft_strncmp.o $(OBJ_DIR)/ft_memchr.o \
-      $(OBJ_DIR)/ft_memcmp.o $(OBJ_DIR)/ft_strnstr.o $(OBJ_DIR)/ft_atoi.o \
-      $(OBJ_DIR)/ft_calloc.o $(OBJ_DIR)/ft_strdup.o $(OBJ_DIR)/ft_substr.o \
-      $(OBJ_DIR)/ft_strjoin.o $(OBJ_DIR)/ft_strtrim.o $(OBJ_DIR)/ft_split.o \
-      $(OBJ_DIR)/ft_itoa.o $(OBJ_DIR)/ft_strmapi.o $(OBJ_DIR)/ft_striteri.o \
-      $(OBJ_DIR)/ft_putchar_fd.o $(OBJ_DIR)/ft_putstr_fd.o $(OBJ_DIR)/ft_putendl_fd.o \
-      $(OBJ_DIR)/ft_putnbr_fd.o \
-      $(OBJ_DIR)/get_next_line.o
-
-BONUS_OBJ = $(OBJ_BONUS_DIR)/ft_lstnew_bonus.o $(OBJ_BONUS_DIR)/ft_lstadd_front_bonus.o \
-            $(OBJ_BONUS_DIR)/ft_lstsize_bonus.o $(OBJ_BONUS_DIR)/ft_lstlast_bonus.o \
-            $(OBJ_BONUS_DIR)/ft_lstadd_back_bonus.o $(OBJ_BONUS_DIR)/ft_lstdelone_bonus.o \
-            $(OBJ_BONUS_DIR)/ft_lstclear_bonus.o $(OBJ_BONUS_DIR)/ft_lstiter_bonus.o \
-            $(OBJ_BONUS_DIR)/ft_lstmap_bonus.o
+OBJ_DIR = src/obj
+OBJ = $(SRC:$(SRC_DIR)/%.c=$(OBJ_DIR)/%.o)
 
 INCLUDE = libft.h
 
@@ -67,21 +45,12 @@ all: $(NAME)
 
 $(NAME): $(OBJ)
 	@ar rcs $(NAME) $(OBJ)
-#	@echo "\nLibrería $(NAME) compilada."
-
-bonus: $(OBJ) 
-	@make -s SRC="$(SRC) $(BONUS_SRC)" OBJ="$(OBJ) $(BONUS_OBJ)" 
-#	@echo "Librería con bonus compilada."
+#@echo "\nLibrería $(NAME) compilada."
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c $(INCLUDE)
-	@mkdir -p $(OBJ_DIR) 
-	@$(CC) $(CFLAGS) -c $< -o $@ 
-	@echo -n "\rCompilando: $<"
-
-$(OBJ_DIR)/bonus/%.o: $(BONUS_SRC_DIR)/%.c $(INCLUDE)
-	@mkdir -p $(OBJ_DIR)/bonus
-	@echo "Compilando: $< \r"
-#	@echo "Compilando archivo bonus:\r $<"
+	@mkdir -p $(OBJ_DIR)
+	@$(CC) $(CFLAGS) -c $< -o $@
+#@echo -n "\rCompilando: $<"
 
 clean:
 	@rm -rf $(OBJ_DIR)
@@ -93,5 +62,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all bonus clean fclean re
-
+.PHONY: all clean fclean re
