--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,10 @@
 	"C_Cpp.errorSquiggles": "disabled",
 	"files.associations": {
 		"minishell.h": "c",
-		"ms_structure.h": "c"
+		"ms_structure.h": "c",
+		"termios.h": "c",
+		"limits.h": "c",
+		"stdlib.h": "c",
+		"libft.h": "c"
 	}
 }
