--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -29,7 +29,8 @@ UTILS_DIR := src/utils/
 SOURCES		:=	$(SOURCES_DIR)main.c
 BUILT		:=	$(BUILT_INS_DIR)cd.c $(BUILT_INS_DIR)env.c \
 				$(BUILT_INS_DIR)export_00.c $(BUILT_INS_DIR)export_01.c \
-				$(BUILT_INS_DIR)unset.c $(BUILT_INS_DIR)exit.c 
+				$(BUILT_INS_DIR)unset.c $(BUILT_INS_DIR)exit.c \
+				$(BUILT_INS_DIR)pwd.c
 EXECUTION	:=	$(EXECUTION_DIR)ms_execution.c
 INITIAL		:=	$(INITIAL_DIR)ms_get_prompt.c $(INITIAL_DIR)ms_init_struct.c \
 				$(INITIAL_DIR)ms_loop_minishell.c $(INITIAL_DIR)signals.c 
