--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: frivas <frivas@student.42.fr>              +#+  +:+       +#+         #
+#    By: brivera@student.42madrid.com <brivera>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 17:27:37 by brivera           #+#    #+#              #
-#    Updated: 2025/04/10 15:43:19 by frivas           ###   ########.fr        #
+#    Updated: 2025/04/11 19:21:18 by brivera@stu      ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -35,11 +35,14 @@ EXECUTION	:=	$(EXECUTION_DIR)ms_execution.c
 INITIAL		:=	$(INITIAL_DIR)ms_get_prompt.c $(INITIAL_DIR)ms_init_struct.c \
 				$(INITIAL_DIR)ms_loop_minishell.c $(INITIAL_DIR)signals.c 
 
-PARCE 		:=	$(PARCE_DIR)ms_input_row_validation.c $(PARCE_DIR)ms_check_quotation_marks.c \
-				$(PARCE_DIR)ms_check_pipes.c $(PARCE_DIR)ms_check_redir.c $(PARCE_DIR)ms_split_input.c
+PARCE 		:=	$(PARCE_DIR)ms_input_row_validation.c \
+				$(PARCE_DIR)ms_check_quotation_marks.c \
+				$(PARCE_DIR)ms_check_pipes.c $(PARCE_DIR)ms_check_redir.c \
+				$(PARCE_DIR)ms_split_input.c
 
 UTILS		:=	$(UTILS_DIR)utils.c $(UTILS_DIR)ft_isspace.c $(UTILS_DIR)ft_print_array.c \
-				$(UTILS_DIR)ft_list_remove_if.c $(UTILS_DIR)ft_split_quotes.c
+				$(UTILS_DIR)ft_list_remove_if.c \
+				$(UTILS_DIR)ft_split_quotes.c $(UTILS_DIR)ft_split_pipes.c
 
 SRC 		:=	$(SOURCES) $(BUILT) $(EXECUTION) $(INITIAL) $(PARCE) $(UTILS)
 
