--- a/codigo/Makefile
+++ b/codigo/Makefile
@@ -6,7 +6,7 @@
 #    By: frivas <frivas@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/18 17:27:37 by brivera           #+#    #+#              #
-#    Updated: 2025/04/15 19:42:48 by frivas           ###   ########.fr        #
+#    Updated: 2025/04/16 17:49:06 by frivas           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -30,7 +30,7 @@ SOURCES		:=	$(SOURCES_DIR)main.c
 BUILT		:=	$(BUILT_INS_DIR)cd.c $(BUILT_INS_DIR)env.c \
 				$(BUILT_INS_DIR)export_00.c $(BUILT_INS_DIR)export_01.c \
 				$(BUILT_INS_DIR)unset.c $(BUILT_INS_DIR)exit.c \
-				$(BUILT_INS_DIR)pwd.c
+				$(BUILT_INS_DIR)pwd.c $(BUILT_INS_DIR)echo.c
 EXECUTION	:=	$(EXECUTION_DIR)ms_execution.c
 INITIAL		:=	$(INITIAL_DIR)ms_get_prompt.c $(INITIAL_DIR)ms_init_struct.c \
 				$(INITIAL_DIR)ms_loop_minishell.c $(INITIAL_DIR)signals.c 
